<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/american_flag"

    tools:context=".Main2Activity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">




        <RelativeLayout
            android:id="@+id/re"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view5"
            app:layout_constraintTop_toTopOf="@+id/topView">


            <ImageView
                android:id="@+id/imageView51"
                android:layout_width="match_parent"
                android:layout_height="96dp"
                android:alpha="0.85"
                android:src="@drawable/imagecenter"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="250dp"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:alpha="0.85"
                    android:id="@+id/crmm"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="15sp"
                    android:layout_marginTop="110dp"
                    android:layout_marginRight="15sp"
                    app:cardCornerRadius="30dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal|center_vertical"
                        android:layout_margin="0dp"
                        android:orientation="vertical">


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-condensed"
                            android:text="@string/tmm"
                            android:textAlignment="center"
                            android:textColor="@android:color/black"
                            android:textSize="25sp" />

                    </LinearLayout>


                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:alpha="0.85"
                    android:id="@+id/cr1"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="15sp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="15sp"
                    app:cardCornerRadius="30dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal|center_vertical"
                        android:layout_margin="0dp"
                        android:orientation="vertical">


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-condensed"
                            android:text="@string/t1"
                            android:textAlignment="center"
                            android:textColor="@android:color/black"
                            android:textSize="25sp" />

                    </LinearLayout>


                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:id="@+id/cr4"
                    android:alpha="0.85"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="15sp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="15sp"
                    app:cardCornerRadius="30dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal|center_vertical"
                        android:layout_margin="0dp"
                        android:orientation="vertical">


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-condensed"
                            android:text="@string/t2"
                            android:textAlignment="center"
                            android:textColor="@android:color/black"
                            android:textSize="25sp" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:id="@+id/cr8"
                    android:alpha="0.85"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="15sp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="15sp"
                    app:cardCornerRadius="30dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal|center_vertical"
                        android:layout_margin="0dp"
                        android:orientation="vertical">


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-condensed"
                            android:text="@string/t3"
                            android:textAlignment="center"
                            android:textColor="@android:color/black"
                            android:textSize="25sp" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cr2"
                    android:alpha="0.85"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="15sp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="15sp"
                    app:cardCornerRadius="30dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal|center_vertical"
                        android:layout_margin="0dp"
                        android:orientation="vertical">


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-condensed"
                            android:text="@string/t4"
                            android:textAlignment="center"
                            android:textColor="@android:color/black"
                            android:textSize="25sp" />

                    </LinearLayout>


                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:id="@+id/cr7"
                    android:alpha="0.85"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="15sp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="15sp"
                    app:cardCornerRadius="30dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal|center_vertical"
                        android:layout_margin="0dp"
                        android:orientation="vertical">


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-condensed"
                            android:text="@string/t5"
                            android:textAlignment="center"
                            android:textColor="@android:color/black"
                            android:textSize="25sp" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>


                <androidx.cardview.widget.CardView
                    android:id="@+id/cr3"
                    android:alpha="0.85"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="15sp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="15sp"
                    app:cardCornerRadius="30dp">

                    <LinearLayout
                        android:alpha="0.85"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal|center_vertical"
                        android:layout_margin="0dp"
                        android:orientation="vertical">


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-condensed"
                            android:text="@string/t6"
                            android:textAlignment="center"
                            android:textColor="@android:color/black"
                            android:textSize="25sp" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>


                <androidx.cardview.widget.CardView
                    android:id="@+id/cr6"
                    android:alpha="0.85"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="15sp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="15sp"
                    app:cardCornerRadius="30dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal|center_vertical"
                        android:layout_margin="0dp"
                        android:orientation="vertical">


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-condensed"
                            android:text="@string/t7"
                            android:textAlignment="center"
                            android:textColor="@android:color/black"
                            android:textSize="25sp" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>


                <View

                    android:layout_width="0dp"
                    android:layout_height="150dp"
                    android:background="#0F62FE"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:id="@+id/view6"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:alpha="0"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/topView1" />
            </LinearLayout>

            <ImageView
                android:alpha="0.85"
                android:id="@+id/imageView5"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="170dp"
                app:srcCompat="@mipmap/ic_launcher_round" />

        </RelativeLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>